Harden System Security v1.0.5.0
🎉 Certificates Management: A new page dedicated to enumerating every certificate across all stores in the Local Machine and Current User scopes. Certificates can be sorted, searched, and removed as needed. There is a key capability identifying certificates that are not rooted to the Microsoft's Trusted Roots list and presents options for remediation. When evaluating trust, the app does not rely on the system's certificate store; it uses an independent, built-in trust anchor to validate certificates, so its checks remain unaffected by a potentially compromised system store.

🎊 Audit Policies Management: A new page that retrieves every audit policy on the system — currently numbering approximately 540 items — far more comprehensive than what tools like auditpol report. You can search, sort, and modify each policy's state individually.

🪅 Enhanced Group Policy Editor: You may now remove any policy from a .POL file — whether a system .POL or one you opened in the app. All edits are correctly persisted back to the selected .POL file.

🌐 Improved localization and globalization support for the languages the app currently supports.

📄 Updated documents on the Wiki.

--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,9 +1,1 @@
-* Updated dependencies to the latest versions, including the .NET SDK.
-
-* Fixed an issue related to retrieving the Microsoft recommended User-Mode block rules. Microsoft set the entire repository responsible for hosting the list as Private. Now the app no longer tries to access the repository and instead retrieves the list from the Microsoft Learn page directly.
-
-* When sound is on (it is off by default) in the AppControl Manager, the typing effect's audio no longer appears in the OS media controls.
-
-* Further strengthened both app's security by adopting "DEPENDENTLOADFLAG" flag forcing the app to always find DLLs it needs from the System32 directory only.
-
-* Improved memory management by tightening resource usage in various UI elements of AppControl Manager.
+* Updated dependencies to the latest versions.
